# FractalClockWallpaper

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index_template.html
src/: fractal_clock.rs  lib.rs  wrap_app.rs
