[package]
name = "fractal-wallpaper"
version = "0.1.0"
authors = ["CarbonHell <frafonia@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = true

[dependencies]
eframe = "0.15.0"
wasm-bindgen = "0.2"
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
